--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div id="vis2"></div>
 
 <script type="text/javascript">
-  var specVis1 = "https://raw.githubusercontent.com/chiaravenditti/FIT3179/refs/heads/main/Homework9/map.vg.json";
+  var specVis1 = "https://raw.githubusercontent.com/chiaravenditti/Homework10/refs/heads/main/mapcases.json";
   var specVis2= "https://raw.githubusercontent.com/chiaravenditti/Homework10/refs/heads/main/linechartdeaths.json";
 
   vegaEmbed('#vis1', specVis1).then(function(result) {
