--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   </style>
 </head>
 <body>
-  <h1 style = "text-align:center;">Skin Cancer in Australia</h1>
-<h2 style = "text-align:center;">Skin Cancer Prevalence in Australia</h1>
+  <h1 style = "text-align:center;">Cancer in Australia</h1>
+<h2 style = "text-align:center;">Skin Cancer Cases in Australia</h1>
   
-<h2>This is the map</h2>
+<h2>This is the map </h2>
 <div id="vis1"></div>
 
 <h2>This is the line chart </h2>
