--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
   <h1 style = "text-align:center;">Cancer in Australia</h1>
 <h2 style = "text-align:center;">Skin Cancer Cases in Australia</h1>
   
-<h2>This is the map </h2>
+<h2>Skin cancer cases per State </h2>
 <div id="vis1"></div>
 
-<h2>This is the line chart </h2>
+<h2> Trend of deaths due to skin cancer </h2>
 <div id="vis2"></div>
 
 <script type="text/javascript">
